<resources>
    <string name="app_name">Tour de Ngalam</string>

    <string name="caption_history">Malang terletak di dataran tinggi yang cukup sejuk, Kota Malang ternyata baru bisa berkembang setelah pemerintahan kolonial Belanda hadir di Kota Dingin ini. Kala itu, fasilitas umum sengaja direncanakan sedemikian rupa untuk memenuhi segala kebutuhan keluarga Belanda yang ada di tengah kota Malang. Sedangkan, masyarakat pribumi ditempatkan di daerah pinggiran yang minim fasilitas. Kesan itu, kini dapat rasakan saat berada di kawasan jalan Ijen yang notabene merupakan kawasan elit Malang.</string>
    <string name="caption">Tour de Ngalam adalah aplikasi berbasis android rekomendasi tempat wisata yang ada di Malang Raya. Sebuah aplikasi terbaru untuk menentukan pilihan tempat wisata yang tepat ketika berlibur dan berwisata.</string>

    <string name="researcher">Researcher</string>
    <string name="android_dev">Android Dev</string>

    <string name="reza">REZA</string>
    <string name="ilham">ILHAM</string>
    <string name="greggy">GREGGY</string>

    <string name="holiday">HOLIDAY.</string>
    <string name="app_title">Tour de Malang.</string>
    <string name="list_vacation">Daftar Wisata</string>
    <string name="recommendation">Rekomendasi</string>
    <string name="history">Sejarah</string>
    <string name="about">Tentang</string>
    <string name="playground">Playground</string>
    <string name="mountain">Gunung</string>
    <string name="beach">Pantai</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim ut orci id lacinia. Sed non massa in mauris placerat imperdiet. Cras aliquet massa varius elit interdum lacinia. Nam libero quam, cursus et bibendum vitae, ullamcorper eget ipsum. Ut in ornare odio. Ut blandit aliquam egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec vitae lectus elit. Morbi at commodo metus, ut efficitur diam. Proin non lobortis massa. Quisque interdum elit ante, non placerat leo laoreet ut. Morbi ornare pretium condimentum. Praesent ultrices purus nulla, sed tempus sem bibendum vel. Cras ut orci nec massa vestibulum pharetra. Suspendisse in pellentesque eros, ut vehicula mauris.</string>

    <string-array name="angka">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    // Notification
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
