<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ListVacationActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:onClick="onClickMainMenu"
        android:src="@drawable/back"
        app:layout_constraintRight_toLeftOf="@id/titleListVacation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleListVacation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/electrolize"
        android:paddingTop="33dp"
        android:text="@string/about"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_primary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/captionBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="@id/layoutMain"
            app:layout_constraintRight_toRightOf="@id/layoutMain"
            app:layout_constraintTop_toTopOf="@id/layoutMain" />

        <View
            android:id="@+id/lineTop"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@id/layoutMain"
            app:layout_constraintStart_toStartOf="@id/layoutMain"
            app:layout_constraintTop_toBottomOf="@id/captionBottom" />

        <me.grantland.widget.AutofitLayout
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="23dp"
            app:layout_constraintBottom_toTopOf="@id/lineBottom"
            app:layout_constraintEnd_toEndOf="@id/layoutMain"
            app:layout_constraintStart_toStartOf="@id/layoutMain"
            app:layout_constraintTop_toBottomOf="@id/lineTop">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/electrolize"
                android:text="@string/caption"
                android:textAlignment="center"
                android:textSize="20sp" />

        </me.grantland.widget.AutofitLayout>

        <View
            android:id="@+id/lineBottom"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@id/layoutMain"
            app:layout_constraintStart_toStartOf="@id/layoutMain"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_1"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/dp"
            app:civ_border_color="@color/colorGrey"
            app:civ_border_width="2dp"
            app:layout_constraintRight_toLeftOf="@id/profile_image_2"
            app:layout_constraintTop_toTopOf="@id/profile_image_2" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_2"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/dp_iwonk"
            app:civ_border_color="@color/colorGrey"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="@id/layoutMain"
            app:layout_constraintStart_toStartOf="@id/layoutMain"
            app:layout_constraintTop_toBottomOf="@id/lineBottom" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_3"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/dp_reza"
            app:civ_border_color="@color/colorGrey"
            app:civ_border_width="2dp"
            app:layout_constraintLeft_toRightOf="@id/profile_image_2"
            app:layout_constraintTop_toTopOf="@id/profile_image_2" />

        <TextView
            android:id="@+id/author_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/electrolize"
            android:text="@string/greggy"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/profile_image_1"
            app:layout_constraintRight_toRightOf="@id/profile_image_1"
            app:layout_constraintTop_toBottomOf="@id/profile_image_1" />

        <TextView
            android:id="@+id/author_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/electrolize"
            android:text="@string/ilham"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/profile_image_2"
            app:layout_constraintRight_toRightOf="@id/profile_image_2"
            app:layout_constraintTop_toBottomOf="@id/profile_image_2" />

        <TextView
            android:id="@+id/author_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/electrolize"
            android:text="@string/reza"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/profile_image_3"
            app:layout_constraintRight_toRightOf="@id/profile_image_3"
            app:layout_constraintTop_toBottomOf="@id/profile_image_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/electrolize"
            android:text="@string/android_dev"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="@id/profile_image_1"
            app:layout_constraintRight_toRightOf="@id/profile_image_1"
            app:layout_constraintTop_toBottomOf="@id/author_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/electrolize"
            android:text="@string/researcher"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="@id/profile_image_2"
            app:layout_constraintRight_toRightOf="@id/profile_image_2"
            app:layout_constraintTop_toBottomOf="@id/author_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/electrolize"
            android:text="@string/researcher"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="@id/profile_image_3"
            app:layout_constraintRight_toRightOf="@id/profile_image_3"
            app:layout_constraintTop_toBottomOf="@id/author_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>